fix auth problems